finish layout and decorating

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="app">
+        <h2>Simple Quiz</h2>
+        <div class="question">
+            <h3>this is question?</h3>
+            <div id="answer">
+                <button class="btn correct">Answer 1</button>
+                <button class="btn wrong">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
+            <button id="nextBtn">Next</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
